
= 2000/01/30	0.94

Bugs fixed

	* locks should be released on transaction failure
	* untaint file contents before thawing
	* don't allow calls to save() or commit() from within {pre|post}save()
	* various deadlock situations
	* presave() can now change the location of the state file

New callback:

	* precommit() added to allow changed objects to change other objects
	  prior to commit.

New method: 

	* old() provides pre-transaction value of object

= 1999/11/19	0.93

Carey Evans <c.evans@clear.net.nz> points out that I really should use
autoflush if I'm going to use sync.  Fixed.

= 1999/11/18	0.92

Now storing in network byte order with a header on each file.

postload now receives the id as an argument.

= 1999/11/16	0.91

Ported to perl 5.005_03.

= 1999/11/15	0.9

Inital revision.
