@@ -39,8 +39,8 @@ DESCRIPTION
     Object::Transaction is a virtual base class. In order to use it, you must
     inherit from it and override the `new' method and the `file' method.
 
-    Optomistic locking is used: it is possible that a transaction will fail because
-    the data that is is based upon has changed out from under it.
+    Optomistic locking is used: it is possible that a transaction will fail
+    because the data that is is based upon has changed out from under it.
 
 EXAMPLE
             package User;
@@ -120,10 +120,10 @@ METHODS PROVIDED
                    `preload' for things that should happen before loading and
                    `postload' for things that should happen after loading.
 
-                   Object::Transaction caches objects that are loaded. This is done
-                   both for performance reasons and to make sure that only one copy
-                   of an object is in memory at a time. If caching is not desired,
-                   the `uncache' method must be invoked after loading.
+                   Object::Transaction caches objects that are loaded. This is
+                   done both for performance reasons and to make sure that only
+                   one copy of an object is in memory at a time. If caching is not
+                   desired, the `uncache' method must be invoked after loading.
 
 
     `savelater()'  `savelater' is the usual method of saving an object. The object is
@@ -141,8 +141,8 @@ METHODS PROVIDED
 
     `removelater()'
                    `removelater' is the usual method of removing an object. The
-                   object is not removed at the time that `removelater' is invoked.
-                   It is actually removed when `commit' is invoked.
+                   object is not removed at the time that `removelater' is
+                   invoked. It is actually removed when `commit' is invoked.
 
                    There are two opporunities to customize the behavior of
                    `removelater': `preremove' for things that should happen before
@@ -153,12 +153,12 @@ METHODS PROVIDED
     `remove()'     Simply `removelater' combined with a `commit'
 
 
-    `commit()'     `commit' writes all pending changes to disk. Either all changes will
-                   be saved or none of them will. Deadlocks are avoided by locking
-                   files in order.
+    `commit()'     `commit' writes all pending changes to disk. Either all changes
+                   will be saved or none of them will. Deadlocks are avoided by
+                   locking files in order.
 
-                   Object::Transaction uses opportunistic locking. Commit can fail.
-                   If it fails, it will `die' with a message that begins
+                   Object::Transaction uses opportunistic locking. Commit can
+                   fail. If it fails, it will `die' with a message that begins
                    `DATACHANGE: file'. It is advisable to wrap your entire
                    transaction inside an eval so that it can be re-tried in the
                    event that the data on disk changed between the time is was
@@ -173,10 +173,10 @@ METHODS PROVIDED
                    Transactions that fail due to opportunistic locking problems
                    will be re-run automatically. Beware side-effects!
 
-                   The first parameter is a reference to a function. Any additional
-                   parameters will be passed as parameters to that function. The
-                   return value of `transaction()' is the return value of
-                   `&$funcref()'.
+                   The first parameter is a reference to a function. Any
+                   additional parameters will be passed as parameters to that
+                   function. The return value of `transaction()' is the return
+                   value of `&$funcref()'.
 
                    It is not necessary to use the `transaction()' method. Just
                    beware that `commit()', `save()', and `remove()' can fail.
@@ -184,9 +184,9 @@ METHODS PROVIDED
                    for a reason other than an opportunistic locking problem.
 
 
-    `abandon()'    As an alternative to `commit', all changes may be abandoned. Calling
-                   `abandon()' does not undo changes made to the in-memory copies
-                   of objects.
+    `abandon()'    As an alternative to `commit', all changes may be abandoned.
+                   Calling `abandon()' does not undo changes made to the in-memory
+                   copies of objects.
 
 
     `uncache()'    Object::Transaction caches all objects. To flush an object from
@@ -200,13 +200,13 @@ METHODS PROVIDED
                    object method (`Object::Transaction-'uncache()>). When invoked
                    as a class method, the entire cache is flushed.
 
-    `readlock()'   By default Object::Transaction does not lock objects unless they are
-                   being modified.
+    `readlock()'   By default Object::Transaction does not lock objects unless they
+                   are being modified.
 
-                   The `readlock()' method insures that objects are properly locked
-                   and unchanged during a transaction even if they are not being
-                   modified. `savelater()' takes precedence over `readlock()' so
-                   they can be combined freely.
+                   The `readlock()' method insures that objects are properly
+                   locked and unchanged during a transaction even if they are not
+                   being modified. `savelater()' takes precedence over
+                   `readlock()' so they can be combined freely.
 
                    Paranoid programmers should use `readlock()' on most objects.
 
@@ -222,21 +222,22 @@ REQUIRED METHODS TO OVERRIDE
     `file($ref,$id)'
                    You must provide a function that returns the filename that an
                    object is stored in. The `file' method can be invoked in two
-                   ways: as an object method call without an `$id' parameter; or as
-                   a class method call with an `$id' parameter.
+                   ways: as an object method call without an `$id' parameter; or
+                   as a class method call with an `$id' parameter.
 
 OPTIONAL METHODS TO OVERRIDE
     The following methods may be overridden.
 
 
     `preload($id)' `preload()' is invoked as nearly the first step of `load'. It is
-                   generally used to make sure that the `$id' is valid. `preload()'
-                   is a class method rather than an object method.
+                   generally used to make sure that the `$id' is valid.
+                   `preload()' is a class method rather than an object method.
 
                    The return value of `preload' is a replacement `$id'. For
-                   example, it might be called as `preload("Joe")' to load the user
-                   named Joe, but if users are numbered rather than named it could
-                   return the number for Joe. A return value of undef is ignored.
+                   example, it might be called as `preload("Joe")' to load the
+                   user named Joe, but if users are numbered rather than named it
+                   could return the number for Joe. A return value of undef is
+                   ignored.
 
                    No lock on the underlying file is present at the time `preload'
                    is called.
@@ -255,7 +256,8 @@ OPTIONAL METHODS TO OVERRIDE
 
 
     `presave($old)'
-                   `presave()' is invoked just before an object is written to disk.
+                   `presave()' is invoked just before an object is written to
+                   disk.
 
                    Objects are stored on disk in the file specified by the `file'
                    method. The directory in which that file resides must exist by
@@ -274,7 +276,8 @@ OPTIONAL METHODS TO OVERRIDE
                    Any return values from `presave' will be remembered and passed
                    to `postsave'.
 
-                   `presave' may not invoke `save()', `commit()', or `savelater()'.
+                   `presave' may not invoke `save()', `commit()', or
+                   `savelater()'.
 
 
     `postsave($old,@psv)'
@@ -314,9 +317,9 @@ PUBLIC MEMBER DATA
                    '{'ID'}>. This can be overridden by defining your own `id'
                    function.
 
-    `OLD'          When an object is loaded into memory a copy is made. The copy can be
-                   found at `$obj-'{'OLD'}>. The copy should not be modified. The
-                   copy is explicitly passed in `presave' and `postsave'.
+    `OLD'          When an object is loaded into memory a copy is made. The copy can
+                   be found at `$obj-'{'OLD'}>. The copy should not be modified.
+                   The copy is explicitly passed in `presave' and `postsave'.
 
 PRIVATE MEMBER DATA
     Object::Transaction ads a few data members to each object for its own internal
@@ -332,6 +335,7 @@ PRIVATE MEMBER DATA
             __toremove
             __transdata
             __readonly
+            __trivial
 
     None of these should be touched.
 
